# PerlinNoiseCircle_wxCPP

./: .gitignore  BUILD.md  BUILD_GUIDE_MINGW.md  CMakeLists.txt  CMakeLists_mingw.txt  CONVERSION_SUMMARY.md  README.md  WXWIDGETS_BUILD_SETUP.md  app.manifest  build.bat  build.ps1  default_params.json
include/: Canvas.h  Constants.h  MainFrame.h  ParamPanel.h  PerlinNoise.h
src/: Canvas.cpp  MainFrame.cpp  ParamPanel.cpp  PerlinNoise.cpp  app.rc  main.cpp
